tests/baselines/reference/derivedInterfaceIncompatibleWithBaseIndexer.errors.txt
==== tests/cases/compiler/derivedInterfaceIncompatibleWithBaseIndexer.ts (7 errors) ====
    interface Base {
        [x: number]: { x: number; y: number; };
        [x: string]: { x: number; }
    }
    
    interface Derived extends Base {
        1: { y: number } // error
        ~~~~~~~~~~~~~~~~
!!! error TS2170: All numerically named properties must be assignable to numeric indexer type '{ x: number; y: number; }':
!!! 	Type '{ y: number; }' is missing property 'x' from type '{ x: number; y: number; }'.
    }
    
    interface Derived2 extends Base {
        '1': { y: number } // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2170: All numerically named properties must be assignable to numeric indexer type '{ x: number; y: number; }':
!!! 	Type '{ y: number; }' is missing property 'x' from type '{ x: number; y: number; }'.
    }
    
    interface Derived3 extends Base {
        foo: { y: number } // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2172: All named properties must be assignable to string indexer type '{ x: number; }':
!!! 	Type '{ y: number; }' is missing property 'x' from type '{ x: number; }'.
    }
    
    interface Derived4 extends Base {
        foo(): { x: number } // error
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2172: All named properties must be assignable to string indexer type '{ x: number; }':
!!! 	Type '() => { x: number; }' is missing property 'x' from type '{ x: number; }'.
    }
    
    // satisifies string indexer but not numeric indexer
    interface Derived5 extends Base {
        1: { x: number } // error
        ~~~~~~~~~~~~~~~~
!!! error TS2170: All numerically named properties must be assignable to numeric indexer type '{ x: number; y: number; }':
!!! 	Type '{ x: number; }' is missing property 'y' from type '{ x: number; y: number; }'.
    }
    
    interface Derived5 extends Base {
        '1': { x: number } // error
        ~~~
!!! error TS2000: Duplicate identifier ''1''.
        ~~~~~~~~~~~~~~~~~~
!!! error TS2170: All numerically named properties must be assignable to numeric indexer type '{ x: number; y: number; }':
!!! 	Type '{ x: number; }' is missing property 'y' from type '{ x: number; y: number; }'.
    }